force-app/main/default/objects/ucinn_ascendv2__Relationship__c/ucinn_ascendv2__Relationship__c.object-meta.xml
<CustomObject>
    <description>A connection between constituents that can affect gift processing.</description>
    <label>Relationship</label>
    <nameField>
        <label>Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>