force-app/main/default/objects/ucinn_ascendv2__Relationship__c/fields/Connection_Strength__c.field-meta.xml
<CustomField>
    <fullName>Connection_Strength__c</fullName>
    <inlineHelpText>Strength of relationship between nonfamilial constituents</inlineHelpText>
    <label>Connection Strength</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strength is Unknown</fullName>
            </value>
            <value>
                <fullName>Acquaintance</fullName>
            </value>
            <value>
                <fullName>Close Relationship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>