force-app/main/default/objects/ucinn_ascendv2__Relationship__c/fields/Constituent_Donor_ID__c.field-meta.xml
<CustomField>
    <fullName>Constituent_Donor_ID__c</fullName>
    <description>Constituent Donor ID</description>
    <formula>ucinn_ascendv2__Contact__r.ucinn_ascendv2__Donor_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Constituent Donor ID</label>
    <type>Text</type>
</CustomField>