force-app/main/default/objects/ucinn_ascendv2__Relationship__c/fields/Deceased_Formula__c.field-meta.xml
<CustomField>
    <fullName>Deceased_Formula__c</fullName>
    <formula>ucinn_ascendv2__Related_Contact__r.Deceased_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deceased</label>
    <type>Checkbox</type>
</CustomField>