force-app/main/default/objects/ucinn_ascendv2__Relationship__c/fields/Donor_Advisor_Name__c.field-meta.xml
<CustomField>
    <fullName>Donor_Advisor_Name__c</fullName>
    <description>Used for Donor Advisor who not have an ID in the system</description>
    <inlineHelpText>Used for storing the name of Donor Advisor who does not have an ID in the system</inlineHelpText>
    <label>Donor Advisor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>