force-app/main/default/objects/ucinn_ascendv2__Relationship__c/fields/Gift_Credit_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Gift_Credit_Percentage__c</fullName>
    <description>Used for ISUF</description>
    <label>Gift Credit Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>