force-app/main/default/objects/ucinn_ascendv2__Relationship__c/fields/ISUF_Copy_to_Spouse_Immediate_FamRela__c.field-meta.xml
<CustomField>
    <fullName>ISUF_Copy_to_Spouse_Immediate_FamRela__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This check box will only work for New Child/Step child and Grandchild relationships from the parent/grandparent record</inlineHelpText>
    <label>Copy to Spouse</label>
    <type>Checkbox</type>
</CustomField>