force-app/main/default/objects/ucinn_ascendv2__Relationship__c/fields/Marriage_Date__c.field-meta.xml
<CustomField>
    <fullName>Marriage_Date__c</fullName>
    <label>Marriage Date</label>
    <type>Date</type>
</CustomField>