force-app/main/default/objects/ucinn_ascendv2__Relationship__c/fields/Reciprocal_Soft_Credit__c.field-meta.xml
<CustomField>
    <fullName>Reciprocal_Soft_Credit__c</fullName>
    <description>Pulls Reciprocal relationships soft credit status over to current record for edit checks</description>
    <formula>ucinn_ascendv2__Reciprocal_Relationship__r.ucinn_ascendv2__Apply_Soft_Credit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reciprocal Soft Credit</label>
    <type>Checkbox</type>
</CustomField>