force-app/main/default/objects/ucinn_ascendv2__Relationship__c/fields/ucinn_ascendv2__Apply_Soft_Credit__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Apply_Soft_Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply Soft Credit</label>
    <type>Checkbox</type>
</CustomField>