force-app/main/default/objects/ucinn_ascendv2__Relationship__c/fields/ucinn_ascendv2__Contact_Role_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Contact_Role_Formula__c</fullName>
    <description>Role of the current constituent</description>
    <formula>TEXT(ucinn_ascendv2__Reciprocal_Relationship__r.ucinn_ascendv2__Related_Contact_Role__c)</formula>
    <inlineHelpText>The relationship role of the current constituent to the related constituent. Also known as the Reciprocal Role.</inlineHelpText>
    <label>Constituent Role</label>
    <type>Text</type>
</CustomField>