force-app/main/default/objects/ucinn_ascendv2__Relationship__c/fields/ucinn_ascendv2__Interim__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Interim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the interim for relationship</description>
    <label>Interim</label>
    <referenceTo>ucinn_ascendv2__Interim__c</referenceTo>
    <relationshipLabel>Relationships</relationshipLabel>
    <relationshipName>Relationships_Interim</relationshipName>
    <type>Lookup</type>
</CustomField>