force-app/main/default/objects/ucinn_ascendv2__Relationship__c/fields/ucinn_ascendv2__Merge_Option__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Merge_Option__c</fullName>
    <inlineHelpText>&apos;Move Constituent&apos; moves the related constituent to the primary constituent&apos;s household
&apos;Merge Household&apos; merges the related constituent household into the primary constituent household</inlineHelpText>
    <label>Merge Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Move Constituent</fullName>
            </value>
            <value>
                <fullName>Merge Household</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>