force-app/main/default/objects/ucinn_ascendv2__Relationship__c/fields/ucinn_ascendv2__Reciprocal_Relationship__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Reciprocal_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reciprocal Relationship</label>
    <referenceTo>ucinn_ascendv2__Relationship__c</referenceTo>
    <relationshipLabel>Relationships</relationshipLabel>
    <relationshipName>Relationships_Reciprocal_Relationship</relationshipName>
    <type>Lookup</type>
</CustomField>