force-app/main/default/objects/ucinn_ascendv2__Relationship__c/fields/ucinn_ascendv2__Related_Contact_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Related_Contact_Name_Formula__c</fullName>
    <formula>IF( NOT(ISPICKVAL(ucinn_ascendv2__Related_Contact__r.Salutation, &quot;&quot;)) , TEXT(ucinn_ascendv2__Related_Contact__r.Salutation) &amp; &quot; &quot; &amp; ucinn_ascendv2__Related_Contact__r.FirstName &amp; &quot; &quot; &amp; ucinn_ascendv2__Related_Contact__r.LastName, ucinn_ascendv2__Related_Contact__r.FirstName &amp; &quot; &quot; &amp; ucinn_ascendv2__Related_Contact__r.LastName)</formula>
    <label>Related Constituent Name</label>
    <type>Text</type>
</CustomField>