force-app/main/default/objects/ucinn_ascendv2__Relationship__c/fields/ucinn_ascendv2__Related_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Related_Contact_Role__c</fullName>
    <description>Role of the related constituent</description>
    <inlineHelpText>Select the relationship role of the related constituent to the constituent</inlineHelpText>
    <label>Related Constituent Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>*No Relationship Defined</fullName>
                <isActive>false</isActive>
                <label>*No Relationship Defined</label>
            </value>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>Acquaintance</fullName>
                <isActive>false</isActive>
                <label>Acquaintance</label>
            </value>
            <value>
                <fullName>Assistant</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Aunt/Uncle</fullName>
                <isActive>false</isActive>
                <label>Aunt/Uncle</label>
            </value>
            <value>
                <fullName>Aunt or Uncle</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
                <label>Child/Step Child</label>
            </value>
            <value>
                <fullName>Classified</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Client - Accountant</fullName>
            </value>
            <value>
                <fullName>Client-Accountant</fullName>
                <isActive>false</isActive>
                <label>Client-Accountant</label>
            </value>
            <value>
                <fullName>Client - Attorney</fullName>
            </value>
            <value>
                <fullName>Client-Attorney</fullName>
                <isActive>false</isActive>
                <label>Client-Attorney</label>
            </value>
            <value>
                <fullName>Client - Financial Planner</fullName>
            </value>
            <value>
                <fullName>Client-Financial Planner</fullName>
                <isActive>false</isActive>
                <label>Client-Financial Planner</label>
            </value>
            <value>
                <fullName>Client - Insurance Agent</fullName>
            </value>
            <value>
                <fullName>Client-Insurance Agent</fullName>
                <isActive>false</isActive>
                <label>Client-Insurance Agent</label>
            </value>
            <value>
                <fullName>Client - Other</fullName>
            </value>
            <value>
                <fullName>Client - Trust Officer</fullName>
            </value>
            <value>
                <fullName>Client-Trust Officer</fullName>
                <isActive>false</isActive>
                <label>Client-Trust Officer</label>
            </value>
            <value>
                <fullName>Companion</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
                <isActive>false</isActive>
                <label>Contact</label>
            </value>
            <value>
                <fullName>Cousin</fullName>
            </value>
            <value>
                <fullName>Deceased Spouse or Partner</fullName>
                <isActive>false</isActive>
                <label>Deceased Spouse or Partner</label>
            </value>
            <value>
                <fullName>Deceased Spouse</fullName>
                <label>Deceased Spouse or Partner</label>
            </value>
            <value>
                <fullName>Donor Advisor</fullName>
                <isActive>false</isActive>
                <label>Donor Advisor</label>
            </value>
            <value>
                <fullName>Employed by Company</fullName>
                <isActive>false</isActive>
                <label>Employed by Company</label>
            </value>
            <value>
                <fullName>Ex-Partner</fullName>
                <isActive>false</isActive>
                <label>Ex-Partner</label>
            </value>
            <value>
                <fullName>Ex-Spouse</fullName>
                <isActive>false</isActive>
                <label>Ex-Spouse</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>