force-app/main/default/objects/ucinn_ascendv2__Relationship__c/fields/ucinn_ascendv2__Relationship_Name_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Relationship_Name_Auto_Number__c</fullName>
    <displayFormat>REL-{0000000}</displayFormat>
    <label>Relationship Name Auto Number</label>
    <type>AutoNumber</type>
</CustomField>