force-app/main/default/objects/ucinn_ascendv2__Relationship__c/validationRules/ucinn_ascendv2__Maintain_Deceased_or_Widow_Relationship.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__Maintain_Deceased_or_Widow_Relationship</fullName>
    <active>true</active>
    <description>This validation rule makes sure the user cannot change the relationship role from Deceased/Widow if either the Contact or the Related Contact is Deceased.</description>
    <errorConditionFormula>AND (
$Setup.ucinn_ascendv2__Bypass_Settings__c.ucinn_ascendv2__Bypass_Validation_Rules__c  &lt;&gt; TRUE,
OR(ucinn_ascendv2__Contact__r.ucinn_ascendv2__Is_Deceased__c == True,  ucinn_ascendv2__Related_Contact__r.ucinn_ascendv2__Is_Deceased__c == True),
    NOT(ISPICKVAL(ucinn_ascendv2__Related_Contact_Role__c, &apos;Deceased Spouse&apos;)),
    NOT(ISPICKVAL(ucinn_ascendv2__Related_Contact_Role__c, &apos;Widow&apos;)),
    OR (ISPICKVAL(PRIORVALUE(ucinn_ascendv2__Related_Contact_Role__c), &apos;Deceased Spouse&apos;), ISPICKVAL(PRIORVALUE(ucinn_ascendv2__Related_Contact_Role__c),&apos;Widow&apos;))
)</errorConditionFormula>
    <errorMessage>Please remove the Deceased flag on the Constituent/Related Constituent.</errorMessage>
</ValidationRule>