force-app/main/default/objects/ucinn_ascendv2__Relationship__c/listViews/Created_Today.listView-meta.xml
<ListView>
    <fullName>Created_Today</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Contact__c</columns>
    <columns>ucinn_ascendv2__Related_Contact_Name_Formula__c</columns>
    <columns>ucinn_ascendv2__Related_Contact_Role__c</columns>
    <columns>ucinn_ascendv2__Related_Contact__c</columns>
    <columns>ucinn_ascendv2__Reciprocal_Relationship__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ucinn_ascendv2__Contact_Role_Formula__c</columns>
    <columns>End_Date__c</columns>
    <columns>Start_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Created Today</label>
</ListView>