force-app/main/default/objects/ucinn_ascendv2__Relationship__c/listViews/Deceased_Spouse_Soft_Credit_Check.listView-meta.xml
<ListView>
    <fullName>Deceased_Spouse_Soft_Credit_Check</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Contact__c</columns>
    <columns>ucinn_ascendv2__Related_Contact_Role__c</columns>
    <columns>ucinn_ascendv2__Related_Contact__c</columns>
    <columns>ucinn_ascendv2__Apply_Soft_Credit__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ucinn_ascendv2__Reciprocal_Relationship__c</columns>
    <columns>Reciprocal_Soft_Credit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Apply_Soft_Credit__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ucinn_ascendv2__Related_Contact_Role__c</field>
        <operation>equals</operation>
        <value>Deceased Spouse or Partner,Deceased Spouse</value>
    </filters>
    <filters>
        <field>Reciprocal_Soft_Credit__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Deceased Spouse Soft Credit Check</label>
</ListView>