force-app/main/default/objects/ucinn_ascendv2__Relationship__c/listViews/Spouse_No_Soft_Credit_Check.listView-meta.xml
<ListView>
    <fullName>Spouse_No_Soft_Credit_Check</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Contact__c</columns>
    <columns>ucinn_ascendv2__Related_Contact_Role__c</columns>
    <columns>ucinn_ascendv2__Related_Contact__c</columns>
    <columns>ucinn_ascendv2__Apply_Soft_Credit__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ucinn_ascendv2__Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Apply_Soft_Credit__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ucinn_ascendv2__Related_Contact_Role__c</field>
        <operation>equals</operation>
        <value>Spouse,Spouse or Partner</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessThan</operation>
        <value>9/13/2021 12:00 AM</value>
    </filters>
    <label>Spouse No Soft Credit Check</label>
</ListView>