force-app/main/default/objects/ucinn_ascendv2__Relationship__c/listViews/Spouse_Relationship_Date_Issues.listView-meta.xml
<ListView>
    <fullName>Spouse_Relationship_Date_Issues</fullName>
    <booleanFilter>(1 AND 2) OR (1 AND 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Contact__c</columns>
    <columns>ucinn_ascendv2__Related_Contact_Role__c</columns>
    <columns>ucinn_ascendv2__Related_Contact__c</columns>
    <columns>ucinn_ascendv2__Reciprocal_Relationship__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Marriage_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Related_Contact_Role__c</field>
        <operation>equals</operation>
        <value>Spouse or Partner</value>
    </filters>
    <filters>
        <field>Start_Date__c</field>
        <operation>notEqual</operation>
        <value>1/1/1900</value>
    </filters>
    <filters>
        <field>End_Date__c</field>
        <operation>notEqual</operation>
        <value>1/1/2100</value>
    </filters>
    <label>Spouse Relationship Date Issues</label>
    <sharedTo>
        <group>Information_Management</group>
    </sharedTo>
</ListView>