force-app/main/default/objects/ucinn_ascendv2__Relationship__c/listViews/Spouses_missing_soft_credit.listView-meta.xml
<ListView>
    <fullName>Spouses_missing_soft_credit</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Contact__c</columns>
    <columns>ucinn_ascendv2__Related_Contact_Role__c</columns>
    <columns>ucinn_ascendv2__Related_Contact__c</columns>
    <columns>ucinn_ascendv2__Apply_Soft_Credit__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Contact__c</field>
        <operation>equals</operation>
        <value>Tiffany Loutsch</value>
    </filters>
    <label>Spouses missing soft credit</label>
</ListView>